[gd_scene load_steps=2 format=3 uid="uid://bgame"]

[ext_resource type="Script" path="res://game.gd" id="1_script"]

[node name="Game" type="Node2D"]
script = ExtResource("1_script")

[node name="TowerContainer" type="Node2D" parent="."]

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBox" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="InfoRow" type="HBoxContainer" parent="UI/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="HPLabel" type="Label" parent="UI/MarginContainer/VBox/InfoRow"]
unique_name_in_owner = true
layout_mode = 2
text = "HP: 20"

[node name="GoldLabel" type="Label" parent="UI/MarginContainer/VBox/InfoRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Gold: 100"

[node name="WaveLabel" type="Label" parent="UI/MarginContainer/VBox/InfoRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Wave: 0"

[node name="Buttons" type="HBoxContainer" parent="UI/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="StartWaveBtn" type="Button" parent="UI/MarginContainer/VBox/Buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Wave"

[node name="BackBtn" type="Button" parent="UI/MarginContainer/VBox/Buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "Back to Menu"

[node name="NoMapLabel" type="Label" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -40.0
offset_right = 220.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
text = "No map saved. Use Map Editor to create and save a map first."
horizontal_alignment = 1

[node name="GameOverLabel" type="Label" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -20.0
offset_right = 80.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 28
text = "Game Over"
horizontal_alignment = 1
